Project

General

Profile

Actions

Bug #10124

closed

smatch fixes for cryptoadm

Added by John Levon almost 5 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2018-12-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

smatch found a double free, a leak, and a bad NULL check in cryptoadm

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 9d1587b49e4692b8d6652e6c0b113a53b1af5313

commit  9d1587b49e4692b8d6652e6c0b113a53b1af5313
Author: John Levon <john.levon@joyent.com>
Date:   2019-02-20T17:22:12.000Z

    10124 smatch fixes for cryptoadm
    Reviewed by: Andy Stormont <astormont@racktopsystems.com>
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Approved by: Robert Mustacchi <rm@joyent.com>

Actions

Also available in: Atom PDF